--- a/head.html
+++ b/head.html
@@ -4,3 +4,4 @@
 <!-- <script src="/scripts/bootstrap.min.js" type="module"></script> -->
 <link rel="stylesheet" href="/styles/styles.css"/>
 <!-- <link rel="stylesheet" href="/styles/bootstrap.min.css"/> -->
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
